Updated CSS: Fixed flex wrap issues on quote section and fixed buttom size

--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ body {
     flex: 1;
     background-color: #1F2937;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 8px 16px;
+    padding: 8px 10px;
+    margin-bottom: 100px;
 }
 
 .header .title {
@@ -45,17 +46,28 @@ body {
 }
 
 .top-section .container {
+    flex: 1;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 225px;
+    padding-right: 220px;
 }
 
 .top-section .container .text {
+    flex-wrap: wrap;
+    width: 550px;
     display: flex;
-    flex-direction: column;
+    gap: 8px;
+}
+
+.top-section .container .subtext {
+    width: 500px;
 }
 
 .top-section .image-placeholder {
-    height: 200px;
-    width: 300px;
+    height: 250px;
+    width: 550px;
     background-color: gray;
     display: flex;
     justify-content: center;
@@ -123,13 +135,14 @@ a {
 }
 
 .quote-section {
+    flex: 1;
     height: 400px;
     background-color: #E5E7EB;
     color: #1F2937;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 450px;
+    padding: 150px 450px;
     flex-wrap: wrap;
 }
 
@@ -199,10 +212,25 @@ button {
 }
 
 .call-section .main-container .sign-button {
+    font-weight: bold;
+    padding: 8px 40px;
+    border: 2px solid white;
 
+}
+
+.call-section .main-container .sign-button:active {
+    box-shadow: box-shadow:
+              7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+            transform: translateY(4px);
 }
 
 .top-section .sign-button {
     font-weight: bold;
-    border: 1px solid #3882F6;
+    border: 1px solid #3882F6;x;
+}
+
+.top-section .sign-button:active {
+    box-shadow: box-shadow:
+              7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+            transform: translateY(4px);
 }
